# jiten

./: .envrc.template  .gitignore  .gitmodules  CHANGELOG.md  LICENSE  Makefile  README.md  cabal.project  flake.nix  jiten.cabal  yomi.c
.golden/: findTagMetaBulk.expected  findTermMetaBulk_json.expected  findTermMetaBulk_show.expected  findTermsBulk_json.expected  findTermsBulk_土木工事_json.expected  findTermsHTML_simple_1.expected  findTermsHTML_simple_2.expected  findTermsHTML_split_1.expected  findTermsHTML_split_2.expected  findTerms_simple_1.expected  findTerms_split_1.expected  getDictionarySummaries.expected
.golden/findTerms_1_simple/: golden
exe/: Main.hs
js/: patch.js  shims.js  yomi.js
src/Jiten/: CLI.hs  Database.hs  Server.hs  Util.hs  Yomichan.hs
src/Jiten/Server/: SearchPage.hs
src/Jiten/Yomichan/: Core.hs  Dictionary.hs  Display.hs  Parser.hs  Search.hs  Summary.hs
test/: Main.hs
test/Jiten/: DatabaseSpec.hs  TestUtil.hs  YomichanSpec.hs
test/Jiten/Yomichan/: SearchSpec.hs
