cabal-version:      3.0
name:               jiten
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Filippo Sestini
maintainer:         sestini.filippo@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall
    default-extensions: OverloadedStrings
                      , LambdaCase
                      , TupleSections

library
    import:           warnings
    exposed-modules:  Jiten.Yomichan
                    , Jiten.Server
                    , Jiten.Database
                    , Jiten.CLI
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.20.0.0
                    , text
                    , bytestring
                    , aeson
                    , containers
                    , mtl
                    , extra
                    , zip-archive
                    , conduit
                    , conduit-aeson
                    , scotty
                    , sqlite-simple
                    , time
                    , filepath
                    , optparse-applicative
    hs-source-dirs:   src
    default-language: Haskell2010

executable jiten
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.20.0.0,
        jiten

    hs-source-dirs:   exe
    default-language: Haskell2010

test-suite jiten-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.0.0,
        jiten
