cabal-version:      3.0
name:               jiten
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-only
license-file:       LICENSE
author:             Filippo Sestini
maintainer:         sestini.filippo@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files:
    vendor/quickjs/*.h

common warnings
    ghc-options: -Wall
    default-extensions: OverloadedStrings
                      , LambdaCase
                      , TupleSections

library
    import:           warnings
    exposed-modules:  Jiten.Yomichan.Dictionary
                    , Jiten.Yomichan.Core
                    , Jiten.Yomichan.Search
                    , Jiten.Yomichan.Display
                    , Jiten.Yomichan.SearchPageTemplate
                    , Jiten.Server
                    , Jiten.Database
                    , Jiten.CLI
                    , Jiten.Util
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.20.0.0
                    , text >= 2.1.2
                    , bytestring
                    , aeson
                    , containers
                    , mtl
                    , extra
                    , zip-archive
                    , conduit
                    , conduit-aeson
                    , scotty
                    , sqlite-simple
                    , time
                    , filepath
                    , optparse-applicative
                    , formatting
                    , text-format
                    , taggy
                    , unordered-containers
                    , blaze-markup
                    , blaze-html
                    , wai-cors
                    , wai-middleware-static

    cc-options:
        -static -D_GNU_SOURCE -DCONFIG_VERSION="2020-11-08" -DCONFIG_BIGNUM

    c-sources:
        vendor/quickjs/cutils.c
        vendor/quickjs/libbf.c
        vendor/quickjs/libunicode.c
        vendor/quickjs/libregexp.c
        vendor/quickjs/quickjs.c
        vendor/quickjs/quickjs-libc.c
        yomi.c
        dist/yomi_compiled.c

    data-files:
        vendor/yomitan/ext/css/*.css
        vendor/yomitan/ext/images/*.png
        vendor/yomitan/ext/images/*.svg
    hs-source-dirs:   src
    other-modules:    Paths_jiten
    default-language: Haskell2010
    include-dirs:     vendor/quickjs
    includes:         vendor/quickjs/quickjs.h vendor/quickjs/quickjs-libc.h

executable jiten
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    other-modules:    Paths_jiten
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base ^>=4.20.0.0,
        jiten

    hs-source-dirs:   exe
    default-language: Haskell2010

test-suite jiten-test
    import:           warnings
    default-language: Haskell2010
    other-modules:
        Jiten.DatabaseSpec
      , Jiten.YomichanSpec
      , Jiten.TestUtil
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    other-modules:    Paths_jiten
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.0.0,
        jiten,
        hspec,
        hspec-golden,
        text,
        aeson,
        aeson-pretty,
        containers,
        sqlite-simple,
        blaze-html
